Adicionando a sintese das perguntas ao final do notebook 06

--- a/01_notebooks/06_solucao_do_problema_analise_negocio.ipynb
+++ b/01_notebooks/06_solucao_do_problema_analise_negocio.ipynb
@@ -17,9 +17,7 @@
     "\n",
     "## Contextualização do Problema\n",
     "\n",
-    "Este notebook tem como objetivo responder às perguntas de negócio definidas na etapa inicial do MVP, utilizando os dados tratados e modelados na camada Gold (Data Warehouse).\n",
-    "\n",
-    "A análise busca compreender como variáveis operacionais influenciam a ocorrência de falhas em equipamentos industriais, de forma a apoiar estratégias de manutenção preditiva.\n"
+    "Este notebook corresponde à etapa de solução do problema do MVP, na qual os dados modelados na camada Gold são analisados com o objetivo de responder às perguntas de negócio definidas no Notebook 00. As análises buscam identificar variáveis operacionais críticas, padrões associados à ocorrência de falhas e comportamentos que possam apoiar estratégias de manutenção preditiva.\n"
    ]
   },
   {
@@ -37,11 +35,30 @@
    "source": [
     "## Perguntas de Negócio\n",
     "\n",
-    "1. Quais variáveis operacionais apresentam maior influência na ocorrência de falhas?\n",
-    "2. Existem padrões específicos de operação associados a falhas?\n",
-    "3. Como se comportam as principais métricas operacionais em situações de falha e operação normal?\n",
-    "4. Quais tipos de falha ocorrem com maior frequência?\n",
-    "5. Existem tipos de máquinas mais suscetíveis a falhas?\n"
+    "As análises apresentadas neste notebook têm como objetivo responder às seguintes perguntas de negócio:\n",
+    "\n",
+    "1. Quais variáveis operacionais estão mais associadas à ocorrência de falhas?\n",
+    "2. Existem padrões operacionais relacionados a maiores taxas de falha?\n",
+    "3. É possível identificar condições de operação associadas a menor probabilidade de falha?\n",
+    "4. Como se comportam as principais métricas operacionais em cenários de falha e de operação normal?\n",
+    "5. De que forma a análise desses dados pode apoiar estratégias de manutenção preditiva?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2eec7bfb-955c-485e-a441-e832c8721a72",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "A análise a seguir busca responder às perguntas 1 e 4, comparando o comportamento das principais variáveis operacionais em cenários de falha e de operação normal.\n"
    ]
   },
   {
@@ -242,7 +259,24 @@
     }
    },
    "source": [
-    "A comparação entre operação normal e cenários de falha mostra que registros com falha apresentam, em média, **temperaturas mais elevadas**, **maior torque** e **maior desgaste da ferramenta**, enquanto operam com **menor velocidade de rotação**. Esse padrão indica maior estresse térmico e mecânico associado à ocorrência de falhas, reforçando a relevância dessas variáveis para estratégias de manutenção preditiva.\n"
+    "A comparação entre operação normal e cenários de falha mostra que registros com falha apresentam, em média, **temperaturas mais elevadas**, **maior torque** e **maior desgaste da ferramenta**, enquanto operam com **menor velocidade de rotação**. Esse padrão indica maior estresse térmico e mecânico associado à ocorrência de falhas, reforçando a relevância dessas variáveis para estratégias de manutenção preditiva.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d472af24-7216-4e8e-9976-17907c388d6a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "A consulta a seguir apresenta a taxa global de falha observada no conjunto de dados."
    ]
   },
   {
@@ -395,7 +429,7 @@
     }
    },
    "source": [
-    "A análise global indica uma taxa de falha de aproximadamente **3,39%**, com **339 falhas** em um total de **10.000 registros**. Esse resultado confirma que eventos de falha são relativamente raros no conjunto de dados, cenário típico em ambientes industriais, reforçando a necessidade de abordagens analíticas para sua identificação e prevenção.\n",
+    "A taxa de falha observada é relativamente baixa, indicando que os eventos de falha são minoritários, o que reforça a importância de identificar padrões sutis associados à sua ocorrência.\n",
     "\n"
    ]
   },
@@ -555,8 +589,23 @@
     }
    },
    "source": [
-    "A comparação entre os cenários de operação normal e falha evidencia que, nos registros com falha, as máquinas operam com **menor velocidade média de rotação** e **maior torque médio**, indicando maior esforço mecânico associado à ocorrência de falhas.\n",
-    "\n"
+    "A comparação entre os cenários de operação normal e falha evidencia que, nos registros com falha, as máquinas operam com **menor velocidade média de rotação** e **maior torque médio**, indicando maior esforço mecânico associado à ocorrência de falhas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3fe84b0e-bdff-45b6-8be2-dd54393caf41",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "A análise a seguir contribui para responder à pergunta 2, ao identificar quais tipos de falha ocorrem com maior frequência."
    ]
   },
   {
@@ -889,6 +938,37 @@
    "source": [
     "A análise da taxa média de falha por tipo de máquina evidencia que equipamentos do tipo **L** apresentam maior propensão a falhas, seguidos pelos tipos **M**, enquanto máquinas do tipo **H** apresentam a menor taxa de falha. Esse resultado indica comportamentos operacionais distintos entre os grupos, reforçando a necessidade de estratégias de manutenção diferenciadas por tipo de equipamento.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d44e50bd-5fc5-41d1-b082-3fe81dcdb2b7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Síntese das Perguntas de Negócio\n",
+    "\n",
+    "**1. Quais variáveis operacionais estão mais associadas à ocorrência de falhas?**  \n",
+    "As análises indicam que aumento de temperatura, maior torque e maior desgaste da ferramenta estão associados à ocorrência de falhas, enquanto a redução da velocidade de rotação também se mostra relevante.\n",
+    "\n",
+    "**2. Existem padrões operacionais relacionados a maiores taxas de falha?**  \n",
+    "Sim. Observam-se padrões recorrentes de falha associados a mecanismos como dissipação de calor, sobrecarga e potência, indicando maior estresse operacional.\n",
+    "\n",
+    "**3. É possível identificar condições de operação associadas a menor probabilidade de falha?**  \n",
+    "Sim. Condições opostas às observadas nos cenários de falha — menores temperaturas, menor torque e menor desgaste da ferramenta — estão associadas a maior estabilidade operacional.\n",
+    "\n",
+    "**4. Como se comportam as principais métricas operacionais em cenários de falha e de operação normal?**  \n",
+    "Em cenários de falha, as máquinas operam, em média, com maior temperatura, maior torque e maior desgaste da ferramenta, além de menor velocidade de rotação, quando comparadas à operação normal.\n",
+    "\n",
+    "**5. De que forma a análise desses dados pode apoiar estratégias de manutenção preditiva?**  \n",
+    "A identificação de variáveis críticas e padrões operacionais permite antecipar condições de risco, subsidiando ações de manutenção preditiva e preventiva.\n"
    ]
   },
   {
