Adicionando catálogo de Dados no Notebook 03

--- a/01_notebooks/03_modelagem_dw_gold.ipynb
+++ b/01_notebooks/03_modelagem_dw_gold.ipynb
@@ -891,6 +891,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4715486e-da48-4c01-a6d5-e1ec2fef9b72",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Catálogo de Dados – Camada Gold\n",
+    "\n",
+    "### Dimensão: dim_machine\n",
+    "\n",
+    "| Coluna | Tipo | Descrição | Domínio / Observações |\n",
+    "|------|------|-----------|----------------------|\n",
+    "| machine_sk | Integer | Chave substituta da máquina | Gerada automaticamente |\n",
+    "| product_id | String | Identificador do produto | Valores alfanuméricos |\n",
+    "| type | String | Tipo da máquina | L, M, H |\n",
+    "\n",
+    "\n",
+    "### Fato: fact_maintenance\n",
+    "\n",
+    "| Coluna | Tipo | Descrição | Domínio / Observações |\n",
+    "|------|------|-----------|----------------------|\n",
+    "| udi | Integer | Identificador único do registro | Valor sequencial |\n",
+    "| machine_sk | Integer | Chave da dimensão máquina | FK para dim_machine |\n",
+    "| air_temperature_k | Double | Temperatura do ar (K) | ~295 a 305 |\n",
+    "| process_temperature_k | Double | Temperatura do processo (K) | ~305 a 315 |\n",
+    "| rotational_speed_rpm | Integer | Velocidade de rotação | Valores positivos |\n",
+    "| torque_nm | Double | Torque aplicado | Valores positivos |\n",
+    "| tool_wear_min | Integer | Desgaste da ferramenta | ≥ 0 |\n",
+    "| machine_failure | Integer | Indicador de falha | 0 = não, 1 = sim |\n",
+    "| twf | Integer | Falha por desgaste | 0 ou 1 |\n",
+    "| hdf | Integer | Falha por dissipação de calor | 0 ou 1 |\n",
+    "| pwf | Integer | Falha de potência | 0 ou 1 |\n",
+    "| osf | Integer | Falha por sobrecarga | 0 ou 1 |\n",
+    "| rnf | Integer | Falha aleatória | 0 ou 1 |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
